(MSS-1620) Fix-PDP-layout-shifts-caused-by-product-images why: Fixed QA reported issue

--- a/mcsus/cartridges/app_custom_mcsus_redesign/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mcsus/cartridges/app_custom_mcsus_redesign/cartridge/client/default/scss/components/_productTiles.scss
@@ -61,14 +61,6 @@
                     }
                 }
             }
-
-            .tile-image {
-
-                @include media-breakpoint-up(lg) {
-                    width: rem(411);
-                    height: rem(411);
-                }
-            }
         }
         
         .tile-body {
